# ImageScale

./: 192x108_outBuf.rgb  1_150x150_outBuf.rgb  2_150x150_outBuf.rgb  3_150x150_outBuf.rgb  CMakeLists.txt  img_type.h  main.cpp  readme.md
bicubic/: bicubic.cpp  bicubic.h
bilinear/: bilinear.cpp  bilinear.h
nearest/: nearest.cpp  nearest.h
output/: ImgScale
